<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormUserActivity">

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="@id/email_edit_text"
        android:textSize="18sp"
        android:text="@string/email_label"/>

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="@id/username_edit_text"
        android:textSize="18sp"
        android:text="@string/username_label"/>

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="@id/password_edit_text"
        android:textSize="18sp"
        android:text="@string/password_label"/>

    <TextView
        android:id="@+id/password_confirmation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
        app:layout_constraintBottom_toBottomOf="@id/password_confirmation_edit_text"
        android:textSize="18sp"
        android:text="@string/password_confirmation_label"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/username_edit_text"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="5dp"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/password_confirmation_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textPassword"
        android:maxLines="1"/>


    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:text="@string/submit_button_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>