<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_synchro"
        android:icon="@drawable/ic_action_synchro"
        android:title="@string/synchro_icon_text"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_action_account"
        android:title="@string/account_icon_text"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/logout_icon_text"
        app:showAsAction="ifRoom"/>

</menu>