<resources>
    <string name="app_name">Car Control by Keyboard</string>
    <string name="synchro_icon_text">Update resources</string>
    <string name="warning_no_data">It seems that there is no data to show. Try to launch a data synchronization.</string>
    <string name="synchro_confirmation_dialog_title">Synchronize data</string>
    <string name="synchro_confirmation_dialog_message">You are going to launch a synchronization. "Please, make sure that you have an active internet connexion.</string>
    <string name="synchro_confirmation_dialog_yes_btn">Launch</string>
    <string name="synchro_confirmation_dialog_no_btn">Cancel</string>
    <string name="synchro_progress_dialog_title">Resources synchronization</string>
    <string name="synchro_progress_dialog_message">Synchronization in progress...</string>
    <string name="account_icon_text">Profile</string>
    <string name="logout_icon_text">Logout</string>
    <string name="login_button_text">Login</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="sp_filename">MySharedPrefs</string>
    <string name="sp_username">sp_username</string>
    <string name="sp_email">sp_email</string>
    <string name="sp_password">sp_password</string>
    <string name="update_account_button_text">Edit info</string>
    <string name="warning_connexion_error">Error. Please, verify your internet connexion.</string>
    <string name="success_account_deletion">Account successfully deleted</string>
    <string name="confirm_deletion_dialog_title">Confirm deletion</string>
    <string name="confirm_deletion_dialog_message">Are you sure that you want to delete your account? This action is irreversible.</string>
    <string name="yes_button_text">Yes</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="deletion_dialog_title">Deleting account</string>
    <string name="deletion_dialog_message">Please, wait</string>
    <string name="email_label">Email</string>
    <string name="password_confirmation_label">Password(again)</string>
    <string name="submit_button_text">Submit</string>
    <string name="warning_passwords_matching">Passwords don\'t match</string>
    <string name="warning_wrong_credentials">Wrong credentials</string>
    <string name="sucess_account_update">Account successfully updated</string>
    <string name="warning_fields_with_spaces">Fields cannot contain spaces</string>
    <string name="warning_empty_fields">All fields are required</string>
    <string name="warning_password_len_out_of_range">Password length out of range(passwords must be 6 and 30 characters long)</string>
    <string name="warning_form_validation">Form validation error. Please, verify the values specified in the form.</string>
    <string name="welcome_message">Welcome,\u0020</string>
    <string name="success_create_account">Account successfully created</string>
    <string name="auth_error_account_deletion">Authentication error (user has already been deleted)</string>
    <string name="warning_auth_error">Authentication error</string>
</resources>