...
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="5dp"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/create_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
...
