<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        android:textSize="18sp"
        tools:text="Username"/>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username_text_view"
        app:layout_constraintStart_toStartOf="@id/username_text_view"
        app:layout_constraintEnd_toEndOf="@id/username_text_view"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        tools:text="Email"/>

    <Button
        android:id="@+id/update_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_text_view"
        app:layout_constraintStart_toStartOf="@id/username_text_view"
        android:layout_marginTop="5dp"
        android:backgroundTint="#17a2b8"
        android:text="@string/update_account_button_text"/>

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/update_account_button"
        app:layout_constraintStart_toEndOf="@id/update_account_button"
        android:layout_marginStart="10dp"
        android:backgroundTint="#dc3545"
        android:text="Delete account"/>

    <Spinner
        android:id="@+id/game_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/update_account_button"
        app:layout_constraintStart_toStartOf="@id/username_text_view"
        app:layout_constraintEnd_toEndOf="@id/username_text_view"
        android:paddingVertical="10dp"
        android:layout_marginTop="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_scores_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/game_spinner"
        app:layout_constraintStart_toStartOf="@id/username_text_view"
        app:layout_constraintEnd_toEndOf="@id/username_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/warning_no_data_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/warning_no_data"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>