...
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/warning_no_data"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rankings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/base_gray"
        app:backgroundTint="@color/base_gray"
...
